add: service-list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d50878a6da.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,8 +72,38 @@
                 </div>
             </div>
         </div>
+       </div>
+       <!--------------servieces----------------->
+       <div id="Services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
+                       Everything you need to get anything done, now in one place: </p>
+                       <a href="#">learn more</a>
+                </div>
+                <div>
+                    <i class="fa-sharp fa-solid fa-crop"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
+                       Everything you need to get anything done, now in one place: </p>
+                       <a href="#">learn more</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store"></i>
+                    <h2>App Design</h2>
+                    <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
+                       Everything you need to get anything done, now in one place: </p>
+                       <a href="#">learn more</a>
+                </div>
 
-    </div>
+            </div>
+        </div>
+
+       </div>
     <script>
         let tabLinks = document.getElementsByClassName("tab-links");
         let tabContents = document.getElementsByClassName("tab-contents");
