add: work details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <!------------about------------------>
     <div id="about">
-        <div class="contener">
+        <div class="container">
             <div class="row">
                 <div class="about-col-1">
                     <img src="images/image1.png.jpg" alt="">
@@ -83,27 +83,52 @@
                     <h2>Web Design</h2>
                     <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
                        Everything you need to get anything done, now in one place: </p>
-                       <a href="#">learn more</a>
+                       <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-sharp fa-solid fa-crop"></i>
                     <h2>UI/UX Design</h2>
                     <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
                        Everything you need to get anything done, now in one place: </p>
-                       <a href="#">learn more</a>
+                       <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
                     <p>Build websites with a drag-and-drop interface. Content automatically optimises for device. 
                        Everything you need to get anything done, now in one place: </p>
-                       <a href="#">learn more</a>
+                       <a href="#">Learn more</a>
                 </div>
 
             </div>
         </div>
 
        </div>
+       <!-------------- portfolio------------ -->
+       <div id="portfoliyo">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="images/pix4.jpg">
+                </div>
+                <div class="work">
+                    <img src="images/pix7.jpg">
+                </div>
+                <div class="work">
+                    <img src="images/pix6.jpg">
+                </div>
+            </div>
+
+        </div>
+
+       </div>
+
+
+
+
+
+
     <script>
         let tabLinks = document.getElementsByClassName("tab-links");
         let tabContents = document.getElementsByClassName("tab-contents");
