add: contact details

--- a/index.html
+++ b/index.html
@@ -110,20 +110,66 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/pix4.jpg">
+                    <img src="images/social1.jpg">
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p>The App connects you you the talented people around the world.
+                            Download it from ply store.</p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
                 </div>
                 <div class="work">
-                    <img src="images/pix7.jpg">
+                    <img src="images/music.jpg">
+                    <div class="layer">
+                        <h3>Music App</h3>
+                        <p>The App connects you you the talented people around the world.
+                            Download it from ply store.
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
                 </div>
                 <div class="work">
-                    <img src="images/pix6.jpg">
+                    <img src="images/online.jpg">
+                    <div class="layer">
+                        <h3>Online Shoping App</h3>
+                        <p>The App connects you you the talented people around the world.
+                            Download it from ply store.
+                        </p>
+                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
                 </div>
             </div>
-
+               <a href="#" class="btn">See more</a>
         </div>
 
        </div>
+      <!-- ------------contact---------------- -->
+      <div id="contact">
+        <div class="container">
+             <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-sharp fa-solid fa-paper-plane"></i>shithinkrishna99@gmail.com</p>
+                    <p><i class="fa-solid fa-square-phone"></i>+918592839499</p>
+                    <div class="social-icons">
+                        <a href=""><i class="fa-brands fa-facebook"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name"required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+             </div>
+        </div>
 
+      </div>
 
 
 
