--- a/index.html
+++ b/index.html
@@ -152,23 +152,26 @@
                     <p><i class="fa-sharp fa-solid fa-paper-plane"></i>shithinkrishna99@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>+918592839499</p>
                     <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100082082441502&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://twitter.com/Shithinkrishna?t=Q72-i71ggtUGEFir_w_eLg&s=09/"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://instagram.com/_shithin_krishna_?igshid=MTA2NDdkNWE="><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/shithin-krishna-a19987267/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
+                    <a href="images/cv3.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
                         <input type="text" name="Name" placeholder="Your Name"required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit">Submit</button>
+                        <button type="submit" class="btn btn2">Submit</button>
                     </form>
                 </div>
              </div>
         </div>
-
+           <div class="copyright">
+            <p>Copyright Shithin ©. Made with <i class="fa-solid fa-heart"></i> by Easy Tutorials</p>
+           </div>
       </div>
 
 
