--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <nav>
                 <img src="images/">
                 <ul id="sidemenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-bars" onclick="openmenu()"></i>
@@ -172,7 +172,7 @@
              </div>
         </div>
            <div class="copyright">
-            <p>Copyright Shithin ©. Made with <i class="fa-solid fa-heart"></i> by Easy Tutorials</p>
+            <p>Copyright Shithin ©. <i class="fa-solid fa-heart"></i></p>
            </div>
       </div>
 
