--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/">
+               <!--------- image-------- -->
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#Services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                     <i class="fas fa-times" onclick="closemenu()"></i>
